<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow android:gravity="center">
        <TextView
            android:textStyle="bold"
            android:textSize="15dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/title"/>
    </TableRow>

    <TableRow>
        <TextView
            android:textStyle="bold"
            android:textSize="15dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/name"/>

        <EditText
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="20dp"
            android:hint="@string/hint_name"/>
    </TableRow>

    <TableRow>
        <TextView
            android:textStyle="bold"
            android:textSize="15dp"
            android:gravity="center"
            android:padding="20dp"
            android:layout_column="0"
            android:text="@string/email"/>

        <EditText
            android:textStyle="bold"
            android:textSize="15dp"
            android:gravity="right"
            android:padding="20dp"
            android:layout_weight="1"
            android:hint="@string/hint_email"/>
    </TableRow>

    <TableRow>
        <Button
            android:layout_weight="1"
            android:layout_span="2"
            android:textSize="15dp"
            android:padding="20dp"
            android:text="@string/button_send"/>
    </TableRow>

</TableLayout>