<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:columnCount="2" android:rowCount="4" >

    <TextView
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:padding="20dp"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/title"/>

    <TextView
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:padding="20dp"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/name"/>

    <EditText
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:padding="20dp"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/hint_name"/>

    <TextView
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:padding="20dp"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/email"/>

    <EditText
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:padding="20dp"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/hint_email"/>

    <Button
        android:textSize="15dp"
        android:padding="20dp"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="fill_horizontal"
        android:text="@string/button_send"/>

</GridLayout>