<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.example.anderson.applandscape.MainActivity">

    <TextView
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@color/red"
        android:padding="@dimen/padding"
        android:text="@string/red"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:background="@color/orange"
        android:padding="@dimen/padding"
        android:text="@string/orange"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@color/yellow"
        android:padding="@dimen/padding"
        android:layout_alignParentRight="true"
        android:text="@string/yellow"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/margin"
        android:layout_below="@+id/red">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/green"
            android:padding="@dimen/padding"
            android:text="@string/green"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_left_right"
            android:background="@color/blue"
            android:padding="@dimen/padding"
            android:text="@string/blue"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/indigo"
            android:padding="@dimen/padding"
            android:text="@string/indigo"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:background="@color/violet"
        android:padding="@dimen/padding"
        android:text="@string/violet"
        />
</RelativeLayout>