<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin_card"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        android:layout_marginBottom="@dimen/margin_card"
        card_view:cardCornerRadius="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:src="@drawable/olinda"
            android:scaleType="centerCrop"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/olinda"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        android:layout_marginBottom="@dimen/margin_card"
        card_view:cardCornerRadius="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:src="@drawable/noronha"
            android:scaleType="centerCrop"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/noronha"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:src="@drawable/diamantina"
            android:scaleType="centerCrop"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/chapada_diamantina"/>

    </android.support.v7.widget.CardView>

</LinearLayout>